--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test": "mocha test"
   },
   "dependencies": {
-    "deep-extend": "^0.4",
-    "pleeease": "https://github.com/iamvdo/pleeease.git"
+    "deep-extend": "^0.6",
+    "pleeease": "https://github.com/iamvdo/pleeease.git#fcc3968f9ad8a88fe76533fc4d31df4672f82cd0"
   },
   "devDependencies": {
     "mocha": "^2.2",
